# calculator

./: .gitignore  CMakeLists.txt  run.sh
src/: main.cpp
src/evaluator/: Evaluator.cpp  Evaluator.h
src/math/: smath.cpp  smath.h
src/menu/: Menu.cpp  Menu.h  Option.cpp  Option.h
src/utils/: colors.h
